// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`News ticker Default renders correctly 1`] = `
<jest>
  <div
    class="ecl-news-ticker"
    data-ecl-auto-init="NewsTicker"
    data-ecl-news-ticker="true"
  >
    <div
      class="ecl-news-ticker__container"
    >
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--m ecl-news-ticker__icon"
        focusable="false"
      >
        <use
          xlink:href="/icons.svg#information"
        />
      </svg>
      <div
        class="ecl-news-ticker__content"
      >
        <ul
          class="ecl-news-ticker__slides"
          id="news-ticker-example-content"
        >
          <li
            class="ecl-news-ticker__slide"
          >
            <a
              class="ecl-link ecl-news-ticker__slide-text"
              href="/example"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit
            </a>
          </li>
          <li
            class="ecl-news-ticker__slide"
          >
            <a
              class="ecl-link ecl-link--icon ecl-link--icon-after ecl-news-ticker__slide-text"
              href="/example"
            >
              <span
                class="ecl-link__label"
              >
                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat
              </span>
              <svg
                aria-hidden="true"
                class="ecl-icon ecl-icon--2xs ecl-link__icon"
                focusable="false"
              >
                <use
                  xlink:href="/icons.svg#external"
                />
              </svg>
            </a>
          </li>
          <li
            class="ecl-news-ticker__slide"
          >
            <a
              class="ecl-link ecl-news-ticker__slide-text"
              href="/example"
            >
              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur
            </a>
          </li>
          <li
            class="ecl-news-ticker__slide"
          >
            <a
              class="ecl-link ecl-news-ticker__slide-text"
              href="/example"
            >
              Excepteur sint occaecat cupidatat officia deserunt mollit anim id est laborum
            </a>
          </li>
          <li
            class="ecl-news-ticker__slide"
          >
            <a
              class="ecl-link ecl-news-ticker__slide-text"
              href="/example"
            >
              Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
            </a>
          </li>
          <li
            class="ecl-news-ticker__slide"
          >
            Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit sed quia consequuntur magni dolores
          </li>
        </ul>
      </div>
    </div>
    <div
      class="ecl-news-ticker__controls"
    >
      <button
        class="ecl-news-ticker__prev"
        data-ecl-news-ticker-prev=""
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--l ecl-icon--rotate-270 ecl-icon--inverted ecl-news-ticker__icon-default"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#corner-arrow"
          />
        </svg>
        <span
          class="ecl-u-sr-only"
        />
      </button>
      <button
        class="ecl-news-ticker__next"
        data-ecl-news-ticker-next=""
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--l ecl-icon--rotate-90 ecl-icon--inverted ecl-news-ticker__icon-default"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#corner-arrow"
          />
        </svg>
        <span
          class="ecl-u-sr-only"
        />
      </button>
      <button
        class="ecl-news-ticker__play"
        data-ecl-news-ticker-play=""
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--l ecl-icon--inverted ecl-news-ticker__icon-default"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#play"
          />
        </svg>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--l ecl-icon--inverted ecl-news-ticker__icon-active"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#play-filled"
          />
        </svg>
        <span
          class="ecl-u-sr-only"
        >
          Play news ticker
        </span>
      </button>
      <button
        class="ecl-news-ticker__pause"
        data-ecl-news-ticker-pause=""
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--l ecl-icon--inverted ecl-news-ticker__icon-default"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#pause"
          />
        </svg>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--l ecl-icon--inverted ecl-news-ticker__icon-active"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#pause-filled"
          />
        </svg>
        <span
          class="ecl-u-sr-only"
        >
          Pause news ticker
        </span>
      </button>
      <div
        class="ecl-news-ticker__counter"
      >
        <span
          class="ecl-news-ticker__counter--current"
        >
          1
        </span>
         of 
        <span
          class="ecl-news-ticker__counter--max"
        >
          6
        </span>
      </div>
    </div>
  </div>
</jest>
`;

exports[`News ticker Default renders correctly with extra attributes 1`] = `
<jest>
  <div
    class="ecl-news-ticker"
    data-ecl-auto-init="NewsTicker"
    data-ecl-news-ticker="true"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    <div
      class="ecl-news-ticker__container"
    >
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--m ecl-news-ticker__icon"
        focusable="false"
      >
        <use
          xlink:href="/icons.svg#information"
        />
      </svg>
      <div
        class="ecl-news-ticker__content"
      >
        <ul
          class="ecl-news-ticker__slides"
          id="news-ticker-example-content"
        >
          <li
            class="ecl-news-ticker__slide"
          >
            <a
              class="ecl-link ecl-news-ticker__slide-text"
              href="/example"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit
            </a>
          </li>
          <li
            class="ecl-news-ticker__slide"
          >
            <a
              class="ecl-link ecl-link--icon ecl-link--icon-after ecl-news-ticker__slide-text"
              href="/example"
            >
              <span
                class="ecl-link__label"
              >
                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat
              </span>
              <svg
                aria-hidden="true"
                class="ecl-icon ecl-icon--2xs ecl-link__icon"
                focusable="false"
              >
                <use
                  xlink:href="/icons.svg#external"
                />
              </svg>
            </a>
          </li>
          <li
            class="ecl-news-ticker__slide"
          >
            <a
              class="ecl-link ecl-news-ticker__slide-text"
              href="/example"
            >
              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur
            </a>
          </li>
          <li
            class="ecl-news-ticker__slide"
          >
            <a
              class="ecl-link ecl-news-ticker__slide-text"
              href="/example"
            >
              Excepteur sint occaecat cupidatat officia deserunt mollit anim id est laborum
            </a>
          </li>
          <li
            class="ecl-news-ticker__slide"
          >
            <a
              class="ecl-link ecl-news-ticker__slide-text"
              href="/example"
            >
              Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
            </a>
          </li>
          <li
            class="ecl-news-ticker__slide"
          >
            Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit sed quia consequuntur magni dolores
          </li>
        </ul>
      </div>
    </div>
    <div
      class="ecl-news-ticker__controls"
    >
      <button
        class="ecl-news-ticker__prev"
        data-ecl-news-ticker-prev=""
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--l ecl-icon--rotate-270 ecl-icon--inverted ecl-news-ticker__icon-default"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#corner-arrow"
          />
        </svg>
        <span
          class="ecl-u-sr-only"
        />
      </button>
      <button
        class="ecl-news-ticker__next"
        data-ecl-news-ticker-next=""
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--l ecl-icon--rotate-90 ecl-icon--inverted ecl-news-ticker__icon-default"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#corner-arrow"
          />
        </svg>
        <span
          class="ecl-u-sr-only"
        />
      </button>
      <button
        class="ecl-news-ticker__play"
        data-ecl-news-ticker-play=""
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--l ecl-icon--inverted ecl-news-ticker__icon-default"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#play"
          />
        </svg>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--l ecl-icon--inverted ecl-news-ticker__icon-active"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#play-filled"
          />
        </svg>
        <span
          class="ecl-u-sr-only"
        >
          Play news ticker
        </span>
      </button>
      <button
        class="ecl-news-ticker__pause"
        data-ecl-news-ticker-pause=""
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--l ecl-icon--inverted ecl-news-ticker__icon-default"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#pause"
          />
        </svg>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--l ecl-icon--inverted ecl-news-ticker__icon-active"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#pause-filled"
          />
        </svg>
        <span
          class="ecl-u-sr-only"
        >
          Pause news ticker
        </span>
      </button>
      <div
        class="ecl-news-ticker__counter"
      >
        <span
          class="ecl-news-ticker__counter--current"
        >
          1
        </span>
         of 
        <span
          class="ecl-news-ticker__counter--max"
        >
          6
        </span>
      </div>
    </div>
  </div>
</jest>
`;

exports[`News ticker Default renders correctly with extra class names 1`] = `
<jest>
  <div
    class="ecl-news-ticker custom-class custom-class--test"
    data-ecl-auto-init="NewsTicker"
    data-ecl-news-ticker="true"
  >
    <div
      class="ecl-news-ticker__container"
    >
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--m ecl-news-ticker__icon"
        focusable="false"
      >
        <use
          xlink:href="/icons.svg#information"
        />
      </svg>
      <div
        class="ecl-news-ticker__content"
      >
        <ul
          class="ecl-news-ticker__slides"
          id="news-ticker-example-content"
        >
          <li
            class="ecl-news-ticker__slide"
          >
            <a
              class="ecl-link ecl-news-ticker__slide-text"
              href="/example"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit
            </a>
          </li>
          <li
            class="ecl-news-ticker__slide"
          >
            <a
              class="ecl-link ecl-link--icon ecl-link--icon-after ecl-news-ticker__slide-text"
              href="/example"
            >
              <span
                class="ecl-link__label"
              >
                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat
              </span>
              <svg
                aria-hidden="true"
                class="ecl-icon ecl-icon--2xs ecl-link__icon"
                focusable="false"
              >
                <use
                  xlink:href="/icons.svg#external"
                />
              </svg>
            </a>
          </li>
          <li
            class="ecl-news-ticker__slide"
          >
            <a
              class="ecl-link ecl-news-ticker__slide-text"
              href="/example"
            >
              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur
            </a>
          </li>
          <li
            class="ecl-news-ticker__slide"
          >
            <a
              class="ecl-link ecl-news-ticker__slide-text"
              href="/example"
            >
              Excepteur sint occaecat cupidatat officia deserunt mollit anim id est laborum
            </a>
          </li>
          <li
            class="ecl-news-ticker__slide"
          >
            <a
              class="ecl-link ecl-news-ticker__slide-text"
              href="/example"
            >
              Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
            </a>
          </li>
          <li
            class="ecl-news-ticker__slide"
          >
            Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit sed quia consequuntur magni dolores
          </li>
        </ul>
      </div>
    </div>
    <div
      class="ecl-news-ticker__controls"
    >
      <button
        class="ecl-news-ticker__prev"
        data-ecl-news-ticker-prev=""
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--l ecl-icon--rotate-270 ecl-icon--inverted ecl-news-ticker__icon-default"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#corner-arrow"
          />
        </svg>
        <span
          class="ecl-u-sr-only"
        />
      </button>
      <button
        class="ecl-news-ticker__next"
        data-ecl-news-ticker-next=""
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--l ecl-icon--rotate-90 ecl-icon--inverted ecl-news-ticker__icon-default"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#corner-arrow"
          />
        </svg>
        <span
          class="ecl-u-sr-only"
        />
      </button>
      <button
        class="ecl-news-ticker__play"
        data-ecl-news-ticker-play=""
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--l ecl-icon--inverted ecl-news-ticker__icon-default"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#play"
          />
        </svg>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--l ecl-icon--inverted ecl-news-ticker__icon-active"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#play-filled"
          />
        </svg>
        <span
          class="ecl-u-sr-only"
        >
          Play news ticker
        </span>
      </button>
      <button
        class="ecl-news-ticker__pause"
        data-ecl-news-ticker-pause=""
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--l ecl-icon--inverted ecl-news-ticker__icon-default"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#pause"
          />
        </svg>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--l ecl-icon--inverted ecl-news-ticker__icon-active"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#pause-filled"
          />
        </svg>
        <span
          class="ecl-u-sr-only"
        >
          Pause news ticker
        </span>
      </button>
      <div
        class="ecl-news-ticker__counter"
      >
        <span
          class="ecl-news-ticker__counter--current"
        >
          1
        </span>
         of 
        <span
          class="ecl-news-ticker__counter--max"
        >
          6
        </span>
      </div>
    </div>
  </div>
</jest>
`;
